fix: changed the gap in the card content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ body {
 .card-content {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 12px;
 }
 
 .card-img {
